--- a/ltconfig.in
+++ b/ltconfig.in
@@ -687,29 +687,28 @@ hardcode_runpath_var=no
 hardcode_shlibpath_var=unsupported
 runpath_var=
 
+case "$host_os" in
+sunos4*)
+  # On these operating systems, we should treat GNU ld like the system ld.
+  gnu_ld_acts_native=yes
+  ;;
+*)
+  gnu_ld_acts_native=no
+  ;;
+esac
+
 ld_shlibs=yes
-if test "$with_gnu_ld" = yes; then
+if test "$with_gnu_ld" = yes && test "$gnu_ld_acts_native" != yes; then
+
   # See if GNU ld supports shared libraries.
-
-  case "$host_os" in
-  sunos4*)
-    ld_shlibs=yes
+  if $LD --help 2>&1 | egrep ': supported targets:.* elf' > /dev/null; then
     archive_cmds='$CC -shared ${wl}-soname $wl$soname -o $lib$libobjs'
-    hardcode_direct=yes
-    hardcode_shlibpath_var=no
-    ;;
-
-  *)
-    if $LD --help 2>&1 | egrep ': supported targets:.* elf' > /dev/null; then
-      archive_cmds='$CC -shared ${wl}-soname $wl$soname -o $lib$libobjs'
-      runpath_var=LD_RUN_PATH
-      hardcode_runpath_var=yes
-      ld_shlibs=yes
-    else
-      ld_shlibs=no
-    fi
-    ;;
-  esac
+    runpath_var=LD_RUN_PATH
+    hardcode_runpath_var=yes
+    ld_shlibs=yes
+  else
+    ld_shlibs=no
+  fi
 
   if test "$ld_shlibs" = yes; then
     hardcode_libdir_flag_spec='${wl}-rpath $wl$libdir'
@@ -830,7 +829,15 @@ else
     ;;
 
   sunos4*)
-    archive_cmds='$LD -assert pure-text -Bstatic -o $lib$libobjs'
+    if test "$with_gcc" = yes; then
+      archive_cmds='$CC -shared -o $lib$libobjs'
+    else
+      archive_cmds='$LD -assert pure-text -Bstatic -o $lib$libobjs'
+    fi
+
+    if test "$with_gnu_ld" = yes; then
+      export_dynamic_flag_spec='${wl}-export-dynamic'
+    fi
     hardcode_libdir_flag_spec='-L$libdir'
     hardcode_direct=yes
     hardcode_minus_L=yes
@@ -859,13 +866,15 @@ if test -z "$NM"; then
   /*) ;; # Let the user override the test with a path.
   *)
     IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS="${IFS}:"
-    for ac_dir in /usr/ucb $PATH /bin; do
+    for ac_dir in /usr/ucb /usr/ccs/bin $PATH /bin; do
       test -z "$ac_dir" && dir=.
       if test -f $ac_dir/nm; then
         # Check to see if the nm accepts a BSD-compat flag.
-        if ($ac_dir/nm -B /dev/null 2>&1; exit 0) | grep /dev/null >/dev/null; then
+        # Adding the `sed 1!d' prevents false positives on HP-UX, which says:
+        #   nm: unknown option "B" ignored
+        if ($ac_dir/nm -B /dev/null 2>&1 | sed '1!d'; exit 0) | egrep /dev/null >/dev/null; then
           NM="$ac_dir/nm -B"
-        elif ($ac_dir/nm -p /dev/null 2>&1; exit 0) | grep /dev/null >/dev/null; then
+        elif ($ac_dir/nm -p /dev/null 2>&1 | sed '1!d'; exit 0) | egrep /dev/null >/dev/null; then
           NM="$ac_dir/nm -p"
 	else
           NM="$ac_dir/nm"
