--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,6 +8,10 @@ TESTS =	assign.test demo-conf.test $(makesequence) \
 	if.test link.test link-2.test nomode.test \
 	quote.test suffix.test test-e.test
 
+# Be sure to reexport important environment variables.
+TESTS_ENVIRONMENT = CC="$(CC)" CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
+	LD="$(LD)" NM="$(NM)" RANLIB="$(RANLIB)" LN_S="$(LN_S)"
+
 EXTRA_DIST = defs tlibtool $(TESTS)
 
 # We need to remove any files that the above tests created.
